Refactor: overhaul of many different things (mostly Teams related)